# rustscope

./: .gitignore  Cargo.toml  HOW_TO_RUN.md  README.md  advanced_demo.json
RELEASES/: v0.4.0.md  v0.5.0.md
examples/: Cargo.toml
examples/src/: advanced_demo.rs  async_demo.rs  benchmark_demo.rs  ci_demo.rs  features_demo.rs  memory_demo.rs  profile_demo.rs  stress_demo.rs
flamegraph-profiler/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
flamegraph-profiler/app/: globals.css  layout.tsx  page.tsx
flamegraph-profiler/components/profiler/: AsyncTab.tsx  Breadcrumb.tsx  CompareTab.tsx  ContextMenu.tsx  Dashboard.tsx  FlameCanvas.tsx  FloatingPanel.tsx  InsightPanel.tsx  Legend.tsx  LocksTab.tsx  MemoryTab.tsx  MetricsBar.tsx  ProfilerView.tsx  ProjectTab.tsx  ReadingGuide.tsx  SessionTab.tsx  Sidebar.tsx  StatsTab.tsx  TimelineCanvas.tsx  Toolbar.tsx  Topbar.tsx  UploadZone.tsx  ZonesTab.tsx
flamegraph-profiler/lib/: colors.ts  demangle.ts  demo-data.ts  insights.ts  layout.ts  parse-profile.ts  profiler-reducer.ts
flamegraph-profiler/types/: profiler.ts
rustscope/: Cargo.toml  build.rs
rustscope-cli/: Cargo.toml
rustscope-cli/src/: main.rs
rustscope-cli/src/output/: mod.rs  schema.rs
rustscope-cli/src/profiler/: cpu.rs  functions.rs  memory.rs  mod.rs  syscalls.rs  threads_fds.rs
rustscope-macros/: Cargo.toml
rustscope-macros/src/: lib.rs
rustscope/src/: allocator.rs  diff.rs  export.rs  global.rs  lib.rs  locks.rs  stats.rs  thread_profile.rs
rustscope/src/async_profile/: mod.rs
rustscope/src/collectors/: cpu.rs  locks.rs  memory.rs  mod.rs  stack.rs  timing.rs
rustscope/src/features/: metadata.rs  mod.rs  outliers.rs  pprof_export.rs  timeline.rs
rustscope/src/output/: schema.rs  writer.rs
rustscope/src/sampling/: mod.rs
rustscope/tests/: integration.rs
