[package]
name = "rustscope-cli"
version = "0.3.1"
edition = "2021"
description = "Unified Rust performance profiler CLI"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/anurag/rustscope"
homepage = "https://github.com/anurag/rustscope"
keywords = ["rust", "profiling", "performance", "cli", "benchmark"]
categories = ["development-tools::profiling", "command-line-utilities"]

[[bin]]
name = "rustscope"
path = "src/main.rs"

[dependencies]
rustscope = { path = "../rustscope" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.27", features = ["signal", "process"] }
procfs = { version = "0.16", optional = true }
libc = "0.2"
ctrlc = "3"
num_cpus = "1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
